# hairbraint

./: .gitignore  Cargo.toml  README.md  yabizness.sql
ghairbraint/: Cargo.toml
hairbraintd/: Cargo.toml
hairbraintd/src/: main.rs
migrations/2023-09-23-014357_create_ash_table/: down.sql  up.sql
src/: #gui.ui#  gui.rs  gui.ui  gui.ui~  main.rs  models.rs  schema.rs
src/app/: mod.rs
src/gui/: appointment.rs  block.rs
static/: example-schedule.html  index.html
static/assets/: _colors.scss  application.js  application.scss  classes.scss  elements.scss  index.css  index.scss  polyfills.js
static/assets/icons/: generate.sh
static/xslt/: example-state.xml  schedule.xml  schedule.xsl  test.html
